# spotbook-backend

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 032213b4edde_initial_migration.py  7eefcb6cd878_initial_migration.py  b6854385c7c9_initial_migration.py  f503297e3e4a_initial_migration.py
app/: config.py  constant.py  main.py
app/api/crud/: payment.py  user.py
app/api/schema/: payment.py  user.py
app/api/v1/: router.py
app/api/v1/endpoint/: event.py  payment.py  user.py  users.py
app/crud/: event.py  payment.py  user.py
app/db/: models.py  session.py
app/db/model/: event.py  payment.py  user.py
app/middleware/: auth.py
app/schema/: event.py  user.py
app/utils/: logging_config.py  security.py
