[tool.poetry]
name = "eventify-backend"
version = "0.1.0"
description = "A backend service for event management"
authors = ["Paramjeet Singh <paramjeet9933@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.78.0"
sqlalchemy = "^1.4.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
isort = "^5.0.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
